# python-pygame-galaga

./: README.md  constants.py  control_points.txt  game.py  main.py  pyproject.toml  spritesheet.py  starfield.py
.github/workflows/: main.yaml
bezier/: control_handler_mover.py  control_point.py  control_point_collection_factory.py  control_point_handler.py  control_point_quartet.py  control_point_quartet_collection.py  path_point.py  path_point_calculator.py  path_point_selector.py
sprites/: control_point.py  control_point_sprite.py  enemy.py  explosion.py  player.py  rocket.py
states/: base_state.py  game_over.py  gameplay.py  menu.py  splash.py
tests/: splash_test.py
