[project]
name = "python-pygame-galaga"
version = "1.0.0"
authors = [
  { name="Patrick Kalkman", email="patrick@simpletechture.nl" },
]
description = "Retentioneering is a powerful Python library for user retention analysis. It provides a simple and intuitive interface for tracking user behavior, analyzing data, and gaining valuable insights into your users."
readme = "README.md"

[tool.black]
line-length = 90

[tool.pyright]
useLibraryCodeForTypes = false
typeCheckingMode = 'strict'
stubPath = './typings'
exclude = [
    '**/__init__.py',
    './typings',
    ]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUnusedClass = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportImportCycles = "error"
reportDuplicateImport = "error"